--- a/index.html
+++ b/index.html
@@ -1,50 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title> Burger king</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Burger king</title>
+  </head>
+  <body>
     <!-- header -->
     <header class="header">
-        <div class="nav">
-            <div class="logo">
-                <img src="./assets/fast-food-logo-design-vector_18099-221-removebg-preview 1.png" class="img-logo">
-                </div>
-                <nav class="main-menu">
-                    <ul class="list-menu">
-                        <li><a  href="#" class="strong link-list">HOME</a></li>
-                        <li><a href="#" class="link-list">PAGES</a></li>
-                        <li><a href="#"  class="link-list">OUR OFFER</a></li>
-                        <li><a href="#" class="link-list">PRICING</a></li>
-                        <li><a href="#" class="link-list">SHOP</a></li>
-                    </ul>
-                </nav>
-                <a href="#" class="btn btn-primary">ORDER NOW</a>
+      <div class="nav">
+        <div class="logo">
+          <img
+            src="./assets/fast-food-logo-design-vector_18099-221-removebg-preview 1.png"
+            class="img-logo"
+          />
         </div>
-            <div class="hero-section">
-                <div class="hero-lead">
-                        <h4 class="short-title">
-                            FAST FOOD BURGERS
-                        </h4>
-                        <h1 class="title-info">The fastest food, for instant hunger.</h1>
-                          <p class="hero-description">Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words & my food and gone back for seconds.</p>
-                          <a href="#" class="btn btn-primary">ORDER NOW</a>
-                </div>
-            </div>
+        <nav class="main-menu">
+          <ul class="list-menu">
+            <li><a href="#" class="strong link-list">HOME</a></li>
+            <li><a href="#" class="link-list">PAGES</a></li>
+            <li><a href="#" class="link-list">OUR OFFER</a></li>
+            <li><a href="#" class="link-list">PRICING</a></li>
+            <li><a href="#" class="link-list">SHOP</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="btn btn-primary">ORDER NOW</a>
+      </div>
+      <div class="hero-section">
+        <div class="hero-lead">
+          <h4 class="short-title">FAST FOOD BURGERS</h4>
+          <h1 class="title-info">The fastest food, for instant hunger.</h1>
+          <p class="hero-description">
+            Some food has looked so awful that it's looked like something that
+            the dog's brought home, yet after one mouthful I've been left eating
+            my thoughts, my words & my food and gone back for seconds.
+          </p>
+          <a href="#" class="btn btn-primary">ORDER NOW</a>
+        </div>
+      </div>
     </header>
 
     <!-- section foods -->
     <section class="food-section">
-        
+      <div class="food_section-conatiner">
+        <!-- chicken pale box -->
+        <div class="cards">
+          <div class="img-card">
+            <figure>
+                <img src="./assets/img-chicken.png" alt="" class="food-img" />
+            </figure>
+          </div>
+          <div class="info-card">
+            <h2 class="boxes-title">Chicken Paella</h2>
+            <p class="boxes-lead">
+              We just don't make and sell food.Good food warms.
+            </p>
+          </div>
+        </div>
+        <!-- Taco Del Mar box -->
+        <div class="cards">
+          <div class="img-card">
+            <figure>
+                <img src="./assets/Taco-img.png" alt="" class="food-img" />
+            </figure>
+          </div>
+          <div class="info-card">
+            <h2 class="boxes-title">Taco Del Mar</h2>
+            <p class="boxes-lead">
+              Taco Del Mar brings the best out of Mexican cuisine with fresh.
+            </p>
+          </div>
+        </div>
+        <!-- Bon Au Pain box -->
+        <div class="cards">
+          <div class="img-card">
+            <figure>
+              <img src="./assets/BonAu-img.png" alt="" class="food-img" />
+            </figure>
+          </div>
+          <div class="info-card">
+            <h2 class="boxes-title">Bon Au Pain</h2>
+            <p class="boxes-lead">
+              Bon Au Pain is a pioneer in the healthy fast food scene.
+            </p>
+          </div>
+        </div>
+        <!-- Pizza Hut box -->
+        <div class="cards">
+          <div class="img-card">
+            <figure>
+              <img src="./assets/Pizza-img.png" alt="" class="food-img" />
+            </figure>
+          </div>
+          <div class="info-card">
+            <h2 class="boxes-title">Pizza Hut.</h2>
+            <p class="boxes-lead">
+              Although the Pizza Hut Menu Prices have tumbled over the years.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
-   
-</body>
+  </body>
 </html>
