fix:style to the order section and use flexbox to display side by side in order section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="cards">
           <div class="img-card">
             <figure>
-                <img src="./assets/img-chicken.png" alt="" class="food-img" />
+              <img src="./assets/img-chicken.png" alt="" class="food-img" />
             </figure>
           </div>
           <div class="info-card">
@@ -70,7 +70,7 @@
         <div class="cards">
           <div class="img-card">
             <figure>
-                <img src="./assets/Taco-img.png" alt="" class="food-img" />
+              <img src="./assets/Taco-img.png" alt="" class="food-img" />
             </figure>
           </div>
           <div class="info-card">
@@ -109,6 +109,29 @@
           </div>
         </div>
       </div>
+    </section>
+    <!-- section buy the humberger -->
+    <section class="section-order-burger">
+        <div class="container-order">
+
+            <div class="order-img">
+              <figure>
+                <img src="./assets/burger-img.png" alt="" class="img-burger" />
+              </figure>
+            </div>
+            <div class="order-information">
+              <h1 class="order-info_title">Burger King</h1>
+              <p class="order-info_lead">
+                Together with McDonald’s, Burger King has grown to become synonymous
+                with burgers in the US.
+              </p>
+              <div class="span">
+                  <span class="big-cost">$6</span> 
+                  <span class="small-cost">$8</span>
+              </div>
+              <a href="#" class="btn btn-primary">ORDER NOW</a>
+            </div>
+        </div>
     </section>
   </body>
 </html>
