fix:add and style the section download

--- a/index.html
+++ b/index.html
@@ -226,26 +226,46 @@
             Thanks a lot for the prompt service. Really appreciate. Excellence
             taste in Every Bite.Add a joy of best Taste. Foodie Moments.
           </p>
-          <h3 class="container-testimonial-title">
-            Adele A. McNeill
-          </h3>
-          <p class="container-testimonial-description">
-            AMIRICAN
-          </p>
+          <h3 class="container-testimonial-title">Adele A. McNeill</h3>
+          <p class="container-testimonial-description">AMIRICAN</p>
         </div>
       </div>
     </section>
     <!-- seection download -->
     <section class="dl-menu">
       <div class="conteiner-menu">
-        <h3 class="title-menu">
-          Download Our Menu
-        </h3>
+        <h3 class="title-menu">Download Our Menu</h3>
         <a href="#" class="btn btn-secondary">DOWNLOAD</a>
       </div>
     </section>
 
-  
+    <!-- footer -->
+    <section class="footer-section">
+      <div class="cotainer-footer">
+        <div class="footer-company-detail">
+          <img
+            src="./assets/fast-food-logo-design-vector_18099-221-removebg-preview 1.png"
+            alt=""
+            class="company-logo"
+          />
+          <div class="info-company">
+            <div class="email-company">
+              <i class="fa-regular fa-envelope"></i>
+              <a href="#" class="link-mail">fastfood_usa@gmail.com</a>
+            </div>
 
+            <div class="site-company">
+              <i class="fa-solid fa-globe"></i>
+              <a href="" class="link-website"> www.fastfood_usa.com</a>
+            </div>
+          </div>
+          div.footer
+
+
+
+
+        </div>
+      </div>
+    </section>
   </body>
 </html>
