fix: add and style footer to the project

--- a/index.html
+++ b/index.html
@@ -259,11 +259,49 @@
               <a href="" class="link-website"> www.fastfood_usa.com</a>
             </div>
           </div>
-          div.footer
+        </div>
+        <div class="footer-heading">
+          <h2 class="footer-heading-title">Our menu</h2>
+          <ul class="list-footer">
+            <li><a class="link-footer" href="#">Breakfast</a></li>
+            <li><a class="link-footer" href="#">Lunce </a></li>
+            <li><a class="link-footer" href="#">Dinner</a></li>
+          </ul>
+        </div>
+        <div class="footer-heading">
+          <h2 class="footer-heading-title">Information</h2>
+          <ul class="list-footer">
+            <li><a class="link-footer" href="#">About us </a></li>
+            <li><a class="link-footer" href="#">Testimonial </a></li>
+            <li><a class="link-footer" href="#">Event</a></li>
+          </ul>
+        </div>
+        <div class="footer-heading">
+          <h2 class="footer-heading-title">Useful Links</h2>
+          <ul class="list-footer">
+            <li><a class="link-footer" href="#">Services</a></li>
+            <li><a class="link-footer" href="#">Support </a></li>
+            <li><a class="link-footer" href="#">Conditions</a></li>
+          </ul>
+        </div>
 
+        <div class="social-conteiner">
+          <h2 class=" social-heading">Social Handles</h2>
 
-
-
+          <ul class="footer-social">
+            <li>
+              <img class="social-icon" src="./assets/facebook 1.svg" alt="" />
+            </li>
+            <li>
+              <img class="social-icon" src="./assets/twitter 1.svg" alt="" />
+            </li>
+            <li>
+              <img class="social-icon" src="./assets/instagram 1.svg" alt="" />
+            </li>
+            <li>
+              <img class="social-icon" src="./assets/linkedin 1.svg" alt="" />
+            </li>
+          </ul>
         </div>
       </div>
     </section>
